--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
-body {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  box-sizing: inherit;
+};
+
+html {
+  font-size: 62.5%;
+};
+body {
+  box-sizing: border-box;
+  min-height: 100%;
 }
+
